<resources>
    <string name="app_name">KOT</string>

    <!--string name="action_about">About</string-->
    <string name="register">Register Here</string>
    <string name="txt_dismiss">Dismiss</string>
    <string name="btn_link_to_register">Not  a member? Sign up now.</string>
    <string name="menu_add_item">menu_add_item</string>
    <string name="menu_show_cart">menu_show_cart</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kitchen_note">Kitchen Note</string>
    <string name="search">Search</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_settings">Settings</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_operation_mode">Operation Mode</string>
    <string-array name="operation_mode_list_titles">
        <item>Waiter</item>
        <item>Customer</item>
        <item>Kitchen</item>
    </string-array>
    <string-array name="operation_mode_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_paid_mode">Paid Mode</string>
    <string-array name="paid_mode_list_titles">
        <item>NFC Card</item>
        <item>Bar Code</item>
        <item>Unpaid</item>
    </string-array>
    <string-array name="paid_mode_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_thermal_printer">Thermal Printer</string>
    <string-array name="thermal_printer_list_titles">
        <item>None</item>
        <item>Built In</item>
        <item>Bluetooth</item>
        <item>Network</item>
    </string-array>
    <string-array name="thermal_printer_list_values">
        <item>1</item>
        <item>0</item>
        <item>2</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_facility_details">Facility Details</string>
    <string-array name="facility_details_list_titles">
        <item>Bill Header</item>
        <item>Bill Footer</item>
        <item>Bill Contact</item>
        <item>Bill Address</item>
    </string-array>
    <string-array name="facility_details_list_values">
        <item>1</item>
        <item>0</item>
        <item>2</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_server_mode">Server Mode</string>
    <string-array name="server_mode_list_titles">
        <item>Internet Enabled</item>
        <item>Local Network</item>
    </string-array>
    <string-array name="server_mode_list_values">
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_server_ip_address">Server IP Address</string>
    <string name="pref_default_server_ip_address">*****</string>

    <string name="pref_title_SSL">Enable social recommendations</string>
    <string name="pref_description_SSL">Discription nahi</string>

    <string name="pref_title_device_name">Device Name</string>
    <string name="pref_default_device_name">Lettuce</string>

    <string name="pref_title_device_id">Device Id</string>
    <string name="pref_default_device_id">0</string>

    <string name="pref_title_login_mode">Login Mode</string>
    <string-array name="login_mode_list_titles">
        <item>No Login</item>
        <item>User Id / Password</item>
    </string-array>
    <string-array name="login_mode_list_values">
        <item>1</item>
        <item>0</item>
    </string-array>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
